deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging-motopay-ns
  labels:
    name: staging-motopay-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plenti-backend-service-deployment
  namespace: staging-motopay-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plenti-backend-service
  template:
    metadata:
      labels:
        app: plenti-backend-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: plenti-backend-service
        image: swr.af-south-1.myhuaweicloud.com/moto/plenti-backend-service:15a8d16cacb23ad3b87debb80e5c3c962ad9e3ee
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8080
        # envFrom:
        #   - secretRef:
        #       name: plenti-backend-secret
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 500Mi
        readinessProbe:  
         tcpSocket:
           port: 8080
         initialDelaySeconds: 15
         periodSeconds: 10
        livenessProbe:  
         tcpSocket:
           port: 8080
         initialDelaySeconds: 90
         periodSeconds: 90

      imagePullSecrets:
        - name: default-secret
---
apiVersion: v1
kind: Service
metadata:
  name: plenti-backend-service
  namespace: staging-motopay-ns
spec:
  type: NodePort  # Change service type to NodePort
  selector:
    app: plenti-backend-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30221  # Define a specific nodePort value (replace with desired port number).

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plenti-backend-ingress
  namespace: staging-motopay-ns
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
#     #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
   - hosts:
     - plenti-backend.staging-api.motopayng.com
     secretName: plenti-backend
  rules:
  - host: plenti-backend.staging-api.motopayng.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: plenti-backend-service
            port:


              number: 8080
